[package]
name = "takeout-travel-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.0", features = ["derive"] }
zip = "0.6.6"
chrono = "0.4.34"
country-boundaries = "1.2.0"
rust_iso3166 = "0.1.11"
lazy_static = "1.4.0"
